--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="/css/style.css">
     <script src="/js/jquery-2.2.1.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/css/bootstrap-select.min.css">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/js/bootstrap-select.min.js"></script>
 
 </head>
 
