updated title and headline

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <% include partials/header %>
-<h2>Hello welcome to your Node, Express Playground</h2>
+<h1>DefundDAPL - Berlin</h1>
 <div class="container">
     <div class="row">
         <div class="col-lg-8">
