--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Boilerplate using node.js, express, ejs</title>
+    <title>DefundDAPL - Berlin</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <script src="/js/jquery-2.2.1.min.js"></script>
