--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,8 @@
     <title>DefundDAPL - Berlin</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/font-awesome.min.css">
+
     <script src="/js/jquery-2.2.1.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
 <!-- Latest compiled and minified CSS -->
