modified join counter

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
         <div class="col-lg-4">
         <% branches.forEach(function(branch){ %>
             <div className="row">
-            <%= branch.name %> <span class="badge pull-right">Joins: <%= branch.joins.length %></span>
+            <%= branch.name %> <span class="badge pull-right">Participant: <%= branch.joins.length %></span>
             <br/>
             <%= branch.info %>
             <br/>
