--- a/views/newBranch.ejs
+++ b/views/newBranch.ejs
@@ -1,6 +1,7 @@
 <% include partials/header %>
 <div class="container">
-  
+<h1>New Branch</h1>
+<br>
 <div id="locationField">
 <div class="row"> 
     <div class="form-group">
