added modal to Branch list view

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,12 @@ body {
     height: 80vh;
 }
 
+#branchList {
+    height: auto;
+    max-height: 80vh;
+    overflow-x: hidden;
+}
+
 .label {
     text-align: right;
     font-weight: bold;
