--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,15 +4,99 @@
         <div class="col-lg-8">
             <div id="map"></div>
         </div>
-        <div class="col-lg-4">
-        <% branches.forEach(function(branch){ %>
+        <div class="col-lg-4" id="branchList">
+        <% branches.forEach(function(branch, i){ %>
             <div className="row">
-            <%= branch.name %> <span class="badge pull-right">Participants: <%= branch.joins.length %></span>
-            <br/>
+            <div className="row">
+                <%= branch.name %> <span class="badge pull-right">Participants: <%= branch.joins.length %></span>
+            </div>
+            <div className="row">
             <%= branch.info %>
-            <br/>
+            </div>
+            <div className="row">
             <%= branch.address %>
+            </div>
+            <div className="row">
+                <div class="pull-right">
+                    <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#joinModal<%= i %>">
+                      Join now!
+                    </button>
+                </div>
+            </div>
+            <div className="row">
             <hr/>
+            </div>
+            
+
+
+
+            <div class="modal fade" id="joinModal<%= i %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel"><%= branch.name %> </h4>
+                  </div>
+                  <div class="modal-body">
+                    <div>
+                        <p>
+                            <%= branch.info %>
+                        </p>
+                    </div>
+                    <div>
+                        <p>Opening Hours:
+                            <%= branch.openinghours %>
+                        </p>
+                    </div>
+                    <div>
+                        <p>Address:
+                            <%= branch.address %>
+                        </p>
+                        <form action="/join/<%= branch._id %>" method="POST">
+                            <div class="row">
+                                <div class="form-group">
+                                    <label for="name" class="col-sm-2 control-label">Name<span class="needed">*</span></label>
+                                    <div class="col-sm-10">
+                                        <input type="text" class="form-control" name="join[name]" id="name" placeholder="Max M.(Mustermann)">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="form-group">
+                                    <label for="mail" class="col-sm-2 control-label">Mail<span class="needed">*</span></label>
+                                    <div class="col-sm-10">
+                                        <input type="text" class="form-control" name="join[mail]" id="mail" placeholder="mail@mail.de">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="form-group">
+                                    <label for="note" class="col-sm-2 control-label">note </label>
+                                    <div class="col-sm-10">
+                                        <input type="text" class="form-control" name="join[note]" id="note" placeholder="For example I arrive at 14:00">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="form-group">
+                                    <label for="phone" class="col-sm-2 control-label">phone</label>
+                                    <div class="col-sm-10">
+                                        <input type="text" class="form-control" name="join[phone]" id="phone" placeholder="phone">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="pull-right">
+                                <button type="submit" class="btn btn-primary">Submit</button>
+                            </div>
+                        </form>
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <p class="text-info">All Info entered (except your name and note) is only visible for our Admins </p>
+                  </div>
+                </div>
+              </div>
+            </div>
         <% }); %>            
         </div>
     </div>
@@ -77,7 +161,7 @@
     '<button type="submit" class="btn btn-primary">Submit</button>'+
     '</div>'+
     '</form>'+
-    '<p class="text-info">All Info entered except your name and note is only visible for our Admins </p>' +
+    '<p class="text-info">All Info entered (except your name and note) is only visible for our Admins </p>' +
     '</div>'+
     '</div>';
 
