added simple security to prevent duplicate branches and added required fields to join form

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,7 +57,7 @@
                                 <div class="form-group">
                                     <label for="name" class="col-sm-2 control-label">Name<span class="needed">*</span></label>
                                     <div class="col-sm-10">
-                                        <input type="text" class="form-control" name="join[name]" id="name" placeholder="Max M.(Mustermann)">
+                                        <input type="text" class="form-control" required="true" name="join[name]" id="name" placeholder="Max M.(Mustermann)">
                                     </div>
                                 </div>
                             </div>
@@ -65,7 +65,7 @@
                                 <div class="form-group">
                                     <label for="mail" class="col-sm-2 control-label">Mail<span class="needed">*</span></label>
                                     <div class="col-sm-10">
-                                        <input type="email" class="form-control" name="join[mail]" id="mail" placeholder="mail@mail.de">
+                                        <input type="email" class="form-control" required="true" name="join[mail]" id="mail" placeholder="mail@mail.de">
                                     </div>
                                 </div>
                             </div>
@@ -129,7 +129,7 @@
     '<div class="form-group">'+ 
     '<label for="name" class="col-sm-2 control-label">Name<span class="needed">*</span></label>'+ 
     '<div class="col-sm-10">'+
-    '<input type="text" class="form-control" name="join[name]" id="name" placeholder="Max M.(Mustermann)">'+
+    '<input type="text" class="form-control" required="true" name="join[name]" id="name" placeholder="Max M.(Mustermann)">'+
     '</div>'+
     '</div>'+
     '</div>'+
@@ -137,7 +137,7 @@
     '<div class="form-group">'+ 
     '<label for="mail" class="col-sm-2 control-label">Mail<span class="needed">*</span></label>'+ 
     '<div class="col-sm-10">'+
-    '<input type="text" class="form-control" name="join[mail]" id="mail" placeholder="mail@mail.de">'+
+    '<input type="text" class="form-control" required="true" name="join[mail]" id="mail" placeholder="mail@mail.de">'+
     '</div>'+
     '</div>'+ 
     '</div>'+
