added also raygun

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,10 @@
+<script src="/js/index.js"></script>
+<script type="text/javascript">
+  rg4js('apiKey', 'PCEeHrezCIrWnZjioI1oTw==');
+  rg4js('enablePulse', true);
+  rg4js('enableCrashReporting', false);
+</script>
 </body>
-    <script src="/js/index.js"></script>
+    
   
 </html>
