geocode to google autocomplete

--- a/views/newBranch.ejs
+++ b/views/newBranch.ejs
@@ -75,7 +75,7 @@ function initAutocomplete() {
   // location types.
   autocomplete = new google.maps.places.Autocomplete(
   /** @type {!HTMLInputElement} */
-  (document.getElementById('autocomplete')),{types: ['establishment']});
+  (document.getElementById('autocomplete')),{types: ['establishment', 'geocode']});
   // When the user selects an address from the dropdown, populate the address
   // fields in the form.
   autocomplete.addListener('place_changed', fillInAddress);
