--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,10 @@
+
+<div id="footer" class="container-fluid">
+  <div class="container">
+    <a href="impressum.html">Impressum</a>
+  </div>
+</div>
+
 <script src="/js/index.js"></script>
 <script type="text/javascript">
   rg4js('apiKey', 'PCEeHrezCIrWnZjioI1oTw==');
@@ -5,6 +12,6 @@
   rg4js('enableCrashReporting', false);
 </script>
 </body>
-    
-  
+
+
 </html>
