--- a/views/index.ejs
+++ b/views/index.ejs
@@ -169,7 +169,7 @@
         <div class="col-lg-6">
           <img src="img/subway.jpg" class="img-responsive"/>
           <br />
-          <p>Greetings from the main organizers, Falk Hermenau and Louise Watson. {Special thanks to <a href="https://redhaircrow.com/">Red HairCrow</a> for his continuous guidance; to Karin Louise Hermes for her support with the flyers; big up to Pierre Humberdroz and Thanh Nguyen for programming the whole thing in a couple days!</p>
+          <p>Greetings from the main organizers, Falk Hermenau and Louise Watson. Special thanks to <a href="https://redhaircrow.com/">Red HairCrow</a> for his continuous guidance; to Karin Louise Hermes for her support with the flyers; big up to Pierre Humberdroz and Thanh Nguyen for programming the whole thing in a couple days!</p>
         </div>
       </div>
     </div>
