--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,19 @@
 
 <div id="footer" class="container-fluid">
   <div class="container">
-    <a href="impressum.html">Impressum</a>
+    <div class="row">
+    	<div class="col-xs-4">
+    		<h4>Impressum:</h4>
+    		<address>
+			  <strong>Pierre Humberdroz</strong><br>
+			  Prenzlauer Allee 242<br>
+			  Berlin, 10405<br>
+			  <abbr title="Phone">P:</abbr> (+49176) 22205290
+			</address>
+    	</div>
+    	<div class="col-xs-4"></div>
+    	<div class="col-xs-4"></div>
+    </div>
   </div>
 </div>
 
