Actually fixing the font

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@ body{
 }
 
 h1,h2,h3,h4,h5,p,div,input,textarea,select{
-	font-family: 'Roboto Slab';
+	font-family: 'Roboto';
 	font-weight: 300;
 }
 
