fixxed mail to impressum

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -8,7 +8,7 @@
 			  <strong>Pierre Humberdroz</strong><br>
 			  Prenzlauer Allee 242<br>
 			  Berlin, 10405<br>
-			  <abbr title="Phone">P:</abbr> +49 (176) 22205290
+			  <abbr title="Phone">P:</abbr> +49 (176) 22205290<br>
 			  <abbr title="mail">M:</abbr> p.humberdroz@gmail.com
 			</address>
     	</div>
