Adding Meta tags

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,6 +2,12 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:url"                content="http://berlin.defunddapl.org/" />
+    <meta property="og:type"               content="article" />
+    <meta property="og:title"              content="Berlin stands with #StandingRock" />
+    <meta property="og:description"        content="Take direct-action and be part of the movement, uplifting indigenous sovereignty and climate justice." />
+    <meta property="og:image"              content="http://i.imgur.com/iaSU1yu.jpg" />
     <title>DefundDAPL - Berlin</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
