subway pic out; info about DKB updated

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
   <div class="row">
     <div class="col-lg-6">
       <h1>What we do</h1>
-      <p>The <a href="http://www.defunddapl.org/">#deFundDAPL global campaign</a> was initiated by the water protectors at Standing Rock and is taking place throughout the month of December. The goal is to pressure the banks funding the pipeline to terminate their investments and use the allmighty power of money against the system. There are <a href="http://www.foodandwaterwatch.org/news/who's-banking-dakota-access-pipeline" target="_blank">three german financial institutions</a> banking the pipeline: Deutsche Bank, Bayern LB and DKB. We decided to focus on <b>Deutsche Bank</b> as they have a lot of branches in Berlin and are the biggest investor with <b>275$ million</b>.</p>
+      <p>The <a href="http://www.defunddapl.org/">#deFundDAPL global campaign</a> was initiated by the water protectors at Standing Rock and is taking place throughout the month of December. The goal is to pressure the banks funding the pipeline to terminate their investments and use the allmighty power of money against the system. There are <a href="http://www.foodandwaterwatch.org/news/who's-banking-dakota-access-pipeline" target="_blank">two german financial institutions</a> banking the pipeline: Deutsche Bank and Bayern LB (DKB being the 100% subsidiary company of the Bayern LB). We decided to focus on <b>Deutsche Bank</b> as they have a lot of branches in Berlin and are the biggest investor with <b>275$ million</b>.</p>
       <p>Hence, we are calling for a collective direct-action on <b>MONDAY 5th!</b> The idea is to empower little groups to take direct action, simultaneously throughout the day at different branches of the DB. With this action, the groups will distribute flyers with the 2 goals in mind:
         <ol>
           <li>Inform people about the situation in Standing Rock and convince them that they can do something about it now!</li>
@@ -167,9 +167,8 @@
           </p>
         </div>
         <div class="col-lg-6">
-          <img src="img/subway.jpg" class="img-responsive"/>
-          <br />
-          <p>Greetings from the main organizers, Falk Hermenau and Louise Watson. Special thanks to <a href="https://redhaircrow.com/">Red HairCrow</a> for his continuous guidance; to Karin Louise Hermes for her support with the flyers; big up to Pierre Humberdroz and Thanh Nguyen for programming the whole thing in a couple days!</p>
+                  <br />
+          <p>Greetings from the organizers, Falk and Louise. Special thanks to <a href="https://redhaircrow.com/">Red HairCrow</a> for his continuous guidance; to Karin Louise Hermes for her support with the flyers; big up to Pierre Humberdroz and Thanh Nguyen for programming the whole thing in a couple days!</p>
         </div>
       </div>
     </div>
