--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
     <div class="col-lg-6">
       <h1>What we do</h1>
       <p>The <a href="http://www.defunddapl.org/">#deFundDAPL global campaign</a> was initiated by the water protectors at Standing Rock and is taking place throughout the month of December. The goal is to pressure the banks funding the pipeline to terminate their investments and use the allmighty power of money against the system. There are <a href="http://www.foodandwaterwatch.org/news/who's-banking-dakota-access-pipeline" target="_blank">two german financial institutions</a> banking the pipeline: Deutsche Bank and Bayern LB (DKB being the 100% subsidiary company of the Bayern LB). We decided to focus on <b>Deutsche Bank</b> as they have a lot of branches in Berlin and are the biggest investor with <b>275$ million</b>.</p>
-      <p>Hence, we are calling for a collective direct-action on <b>MONDAY 5th!</b> The idea is to empower little groups to take direct action, simultaneously throughout the day at different branches of the DB. With this action, the groups will distribute flyers with the 2 goals in mind:
+      <p>Hence, we are calling for a collective direct-action on <b>MONDAY 5th!</b> The idea is to empower little groups to take direct action, simultaneously throughout the day at different branches of the Deutsche Bank. With this action, the groups will distribute flyers with the 2 goals in mind:
         <ol>
           <li>Inform people about the situation in Standing Rock and convince them that they can do something about it now!</li>
           <li>After talking to the people, ask them to go talk to the bank staff (special flyers will be ready for that) and eventually close their bank accounts, following the <a href="http://www.defunddapl.com/defund">guidelines</a>.</li>
@@ -35,8 +35,11 @@
         <li>Contact the other people who registered at the same bank and form a group
           <br /><span class="important">For legal reasons, the limit of the group is 4/5! This has to be taken in account seriously!</span>
         </li>
-        <li>Download and print the flyers - <span style="color: red;">DOWNLOAD COMING SOON!</span></li>
+        <li>Download and print the flyers - <a href="https://docs.google.com/document/d/1TOhqCT6NChjDdXdKj9tORO3r0T8LOq9BEAWcRyoNRG0/edit?usp=sharing" target="_blank">download the flyers</a></li>
         <li>Read the guidelines regarding clothing, attitude and intention. This is a peaceful and a prayerful movement.</li>
+        <li>Take a picture in front of the bank and post it on social media!
+          - use the hashtags #deFundDAPLBerlin #deFundDAPL #bankexit
+          - post it straight on the<a href="" target="_blank">Facebook page of Deutsche Bank</a> and the local one you've been to.
       </ol>
 
       <p><i>Reminder: please do not dress up in 'Native American' clothing or use other tribal symbols (including drumming or chanting) unless it reflects your own heritage and customs.</i></p>
@@ -169,6 +172,7 @@
         <div class="col-lg-6">
                   <br />
           <p>Greetings from the organizers, Falk and Louise. Special thanks to <a href="https://redhaircrow.com/">Red HairCrow</a> for his continuous guidance; to Karin Louise Hermes for her support with the flyers; big up to Pierre Humberdroz and Thanh Nguyen for programming the whole thing in a couple days!</p>
+<img src="" alt="">
         </div>
       </div>
     </div>
