added picture, updated links and guidelines

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
       <p>Hence, we are calling for a collective direct-action on <b>MONDAY 5th!</b> The idea is to empower little groups to take direct action, simultaneously throughout the day at different branches of the Deutsche Bank. With this action, the groups will distribute flyers with the 2 goals in mind:
         <ol>
           <li>Inform people about the situation in Standing Rock and convince them that they can do something about it now!</li>
-          <li>After talking to the people, ask them to go talk to the bank staff (special flyers will be ready for that) and eventually close their bank accounts, following the <a href="http://www.defunddapl.com/defund">guidelines</a>.</li>
+          <li>After talking to the people, ask them to go talk to the bank staff and eventually close their bank accounts, following the guidelines.</li>
         </ol>
       </p>
     </div>
@@ -35,11 +35,11 @@
         <li>Contact the other people who registered at the same bank and form a group
           <br /><span class="important">For legal reasons, the limit of the group is 4/5! This has to be taken in account seriously!</span>
         </li>
-        <li>Download and print the flyers - <a href="https://docs.google.com/document/d/1TOhqCT6NChjDdXdKj9tORO3r0T8LOq9BEAWcRyoNRG0/edit?usp=sharing" target="_blank">download the flyers</a></li>
-        <li>Read the guidelines regarding clothing, attitude and intention. This is a peaceful and a prayerful movement.</li>
+        <li>Download and print the flyers - <a href="https://drive.google.com/file/d/0B5w1KEuTUWhWWE5IQTNkZF85NlE/view?usp=sharing" target="_blank">download the flyers</a></li>
+        <li><a href="http://media.wix.com/ugd/4e1500_bcc5da152b1547118b8e5adc17df4924.pdf" target="_blank">Read the guidelines</a> regarding attitude and intention. This is a peaceful and a prayerful movement.</li>
         <li>Take a picture in front of the bank and post it on social media!
-          - use the hashtags #deFundDAPLBerlin #deFundDAPL #bankexit
-          - post it straight on the<a href="" target="_blank">Facebook page of Deutsche Bank</a> and the local one you've been to.
+          <ul>* use the hashtags <a href="https://www.facebook.com/hashtag/deFundDAPLBerlin#deFundDAPLBerlin" target="_blank">#deFundBerlin</a> <a href="https://www.facebook.com/DeFundDAPL/?fref=ts&__mref=message#deFundDAPL" target="_blank">#deFundDAPL</a> #bankexit </ul>
+          <ul>* @tag your bank or post it straight on the <a href="https://www.facebook.com/DeutscheBankService/?fref=ts" target="_blank">Facebook page of Deutsche Bank</a>. </ul>
       </ol>
 
       <p><i>Reminder: please do not dress up in 'Native American' clothing or use other tribal symbols (including drumming or chanting) unless it reflects your own heritage and customs.</i></p>
@@ -159,8 +159,6 @@
     <div id="afterword" class="container">
       <div class="row">
         <div class="col-lg-6">
-          <img src="img/stopdapl.jpg" class="img-responsive"/>Art by <a href="http://www.thentvs.com/">theNTVS</a>
-          <br /><br />
           <p>
             Take pictures of your group and use the <a href="https://www.facebook.com/groups/1203618013057426/?fref=ts">power of social media</a> and hastags to spread the words! ;)
             <br />
@@ -168,11 +166,15 @@
             <br />#waterislife #mniwiconi #waterprotectors #keepitintheground
             <br />#bankexit #divestdecember #killtheblacksnake #powertothepeople
           </p>
-        </div>
+          <img src="img/defunddapl.jpg" class="img-responsive"/>
+          <p> A group of water protectors at Standing Rock initiating the global campaign <a href="https://www.facebook.com/DeFundDAPL/photos/a.1728753374117974.1073741828.1728559497470695/1740722622921049/?type=3&theater">#deFundDAPL</a></p>
+
+          <br /><br />
+                  </div>
         <div class="col-lg-6">
+                  <img src="img/stopdapl.jpg" class="img-responsive"/>Art by <a href="http://www.thentvs.com/">theNTVS</a>
                   <br />
-          <p>Greetings from the organizers, Falk and Louise. Special thanks to <a href="https://redhaircrow.com/">Red HairCrow</a> for his continuous guidance; to Karin Louise Hermes for her support with the flyers; big up to Pierre Humberdroz and Thanh Nguyen for programming the whole thing in a couple days!</p>
-<img src="" alt="">
+                  <br /><p>Greetings from the organizers, Falk and Louise. Special thanks to <a href="https://redhaircrow.com/">Red HairCrow</a> for his continuous guidance; to Karin Louise Hermes for her support with the flyers; big up to Pierre Humberdroz and Thanh Nguyen for programming the whole thing in a couple days!</p>
         </div>
       </div>
     </div>
