--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -58,7 +58,7 @@
 
   </div>
   <div class="slogan">
-    <h2>THIS MONDAY 5th!</h2>
+    <h2>December: global month of action!</h2>
     <h1>Berlin stands with <a href="https://www.facebook.com/groups/1248721065188084/">#StandingRock</a></h1>
 
      <a href="https://www.youtube.com/watch?v=-7NJeyLzXjc" class="video-link" target="_blank"><i class="fa fa-play-circle" aria-hidden="true"></i> Watch the video</a>
