--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,12 +48,12 @@
   <ol>
     <li>Pick a location and register with your name, contact and setting up a time.</li>
     <li>Contact the other people who registered at the same bank and form a group</li>
-    <br /><span class="important">The ideal is to build groups of 2/3 people</span>
+    <span class="important">The ideal is to build groups of 2/3 people</span>
     <li>Download and print the flyers <!--link-->*english version* / <!--link-->*deutsche version* </li>
 
     <li><a href="http://media.wix.com/ugd/4e1500_bcc5da152b1547118b8e5adc17df4924.pdf" target="_blank">Read the guidelines</a> regarding attitude and intention. This is a peaceful and a prayerful movement.</li>
     <li>Take a picture at the market and post it on social media!
-      <ul>* use the hashtags <a href="https://www.facebook.com/hashtag/deFundDAPLBerlin#deFundDAPLBerlin" target="_blank">#deFundBerlin</a> <a href="https://www.facebook.com/DeFundDAPL/?fref=ts&__mref=message#deFundDAPL" target="_blank">#deFundDAPL</a> #bankexit </ul>
+      <ul>-> use the hashtags <a href="https://www.facebook.com/hashtag/deFundDAPLBerlin#deFundDAPLBerlin" target="_blank">#deFundDAPLBerlin</a> <a href="https://www.facebook.com/DeFundDAPL/?fref=ts&__mref=message#deFundDAPL" target="_blank">#deFundDAPL</a> #bankexit </ul>
       </ol>
 
     <p><i>Reminder: please do not dress up in 'Native American' clothing or use other tribal symbols (including drumming or chanting) unless it reflects your own heritage and customs.</i>
@@ -195,8 +195,7 @@
 
         </div>
         <div class="col-lg-6">
-<<<<<<< HEAD
->>>>>>> 0a397284b6d1b416795633c408609762e6ac13a8
+
           <p>
             Take pictures of your group and use the <a href="https://www.facebook.com/groups/1203618013057426/?fref=ts">power of social media</a> and hastags to spread the words! ;)
             <br />
@@ -204,18 +203,15 @@
             <br />#waterislife #mniwiconi #waterprotectors #keepitintheground
             <br />#bankexit #divestdecember #killtheblacksnake #powertothepeople
           </p>
-<<<<<<< HEAD
 
-=======
->>>>>>> 034cfc654f5845bf5727e1316d88af03c16d9800
           <img src="img/defunddapl.jpg" class="img-responsive"/>
           <p> A group of water protectors at Standing Rock initiating the global campaign <a href="https://www.facebook.com/DeFundDAPL/photos/a.1728753374117974.1073741828.1728559497470695/1740722622921049/?type=3&theater">#deFundDAPL</a></p>
           <br />
           <br />
         </div>
-        
-        
-        
+
+
+
       </div>
       <div class="row">
         <div class="col-lg-6">
@@ -227,7 +223,7 @@
           </p>
         </div>
         <div class="col-lg-6">
-                  <p>Greetings from the organizers, Falk and Louise. Special thanks to <a href="https://redhaircrow.com/">Red HairCrow</a> for his continuous guidance; to Karin Louise Hermes for her support with the flyers; big up to Pierre Humberdroz and Thanh Nguyen for programming the whole thing in a couple days!</p>
+                  <p>Greetings from the organizers, Falk, Karin, Lisa and Louise. Special thanks to <a href="https://redhaircrow.com/">Red HairCrow</a> for his continuous guidance; to Kieran Behan for the graphic design of the flyers; big up to Pierre Humberdroz and Thanh Nguyen for programming the whole thing in a couple days!</p>
         </div>
         </div>
     </div>
